# color-gen

./: .gitattributes  .gitignore  Cargo.toml  README.md  cargo.toml  color.config.json  index.js  package-lock.json  package.json  test.config.json  tokens.sample.json  variants.css
.github/workflows/: CI.yml  release.yml
_src/: main.rs
_src/config/: config.rs  mod.rs  utils.rs
_src/design_token/: resolver.rs
_src/tokens/: mod.rs  token.rs  transformer.rs
examples/plugins/: color.js  math.js
src/: app.rs  cli.rs  config.rs  css.rs  design_token.rs  main.rs  transformer.rs  utils.rs
src/config/: mod.rs
src/design_token/: css_var.rs  mod.rs  resolver.rs  token.rs
src/tokens/: token.rs
templates/: color_base.css.tera  color_key.css.tera  color_token.css.tera  palette.css.tera  semantic.css.tera  theme.css.tera  variant.css.tera
test/: default.css  test.css
test/test/: palette.css  variant-test-brand.css  variant-test-danger.css  variant-test-neutral.css
