[package]
name = "substrate-color-gen"
version = "0.0.7"
edition = "2024"
authors = ["Nathan Brown <me@nathanbrown.dev>"]
license = "MIT"
description = "Color palette generator tool for substrate"
readme = "README.md"
homepage = "https://github.com/neutronui/color-gen"
repository = "https://github.com/neutronui/color-gen"
keywords = ["cli", "css", "colors", "palette", "generator", "substrate", "neutron-ui", "neutron ui"]
categories = ["command-line-utilities"]

[[bin]]
name = "substrate"
path = "src/main.rs"

[dependencies]
bigcolor = "1.2.1"
clap = { version = "4.5.49", features = ["derive"] }
indexmap = { version = "2.12.0", features= ["serde"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
open = "5.3.2"
platform-dirs = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
simply_colored = "0.1.4"
tera = "1.20.0"
thiserror = "2.0.17"
toml = "0.9.8"
